exports[`App snapshots 1`] = `
<div
  className="page">
  <div
    className="interactions">
    <form
      onSubmit={[Function]}>
      Search
       
      <input
        onChange={[Function]}
        type="text"
        value="redux" />
      <button
        type="submit">
        Search
      </button>
    </form>
  </div>
  <div
    className="table" />
  <div
    className="interactions">
    <button
      onClick={[Function]}
      type="button">
      More
    </button>
  </div>
</div>
`;

exports[`Button snapshots 1`] = `
<button
  onClick={undefined}
  type="button">
  Give Me More
</button>
`;

exports[`Search snapshots 1`] = `
<form
  onSubmit={undefined}>
  Search
   
  <input
    onChange={undefined}
    type="text"
    value={undefined} />
  <button
    type="submit">
    Search
  </button>
</form>
`;
